# nordic_zephyr_practice_ncs2.0

OOP_in_C/: CMakeLists.txt  prj.conf
OOP_in_C/include/: duck.h
OOP_in_C/src/: duck.c  main.c  robotArm.c  servoController.c
adxl345/: prj.conf  sample.yaml
adxl345/src/: main.c
alarm/: prj.conf
alarm/src/: main.c
ble_peripheral_ota/: mdbt50q.overlay  prj.conf
ble_peripheral_ota/boards/: nrf52840dk_nrf52840.overlay
ble_peripheral_ota/src/: main.c
blinky_pwm/: nrf52840dk_nrf52840.overlay  prj.conf
blinky_pwm/src/: main.c
button_interrupt/: .gitignore
button_interrupt/src/: main.c
buzzer_pwm/src/: main.c
hello_world/: prj.conf
hello_world/src/: main.c
lvgl_multithreads/: CMakeLists.txt  mdbt50q.overlay  prj.conf
lvgl_multithreads/my_oot_drivers/: Kconfig
lvgl_multithreads/my_oot_drivers/drivers/my_uart_peripheral/: driver.c
lvgl_multithreads/src/: main.c
lvgl_st7735r/: mdbt50q.overlay  prj.conf
lvgl_st7735r/boards/: nrf52840dk_nrf52840.overlay
lvgl_st7735r/src/: image.h  main.c
lvgl_st7789/: .gitignore  mdbt50q.overlay  nrf52840dk_nrf52840.overlay  prj.conf
mass_storage_spi_sd/: mdbt50q.overlay  prj.conf
mdpp_template/: CMakeLists.txt  README.md  mdbt50q.overlay  prj.conf
out_of_tree_driver/: mdbt50q.overlay  prj.conf
sd/: nrf52840dk_nrf52840.overlay  prj.conf
threads_RTOS_practice/: nrf52840dk_nrf52840.overlay  prj.conf
vl6180x/: CMakeLists.txt  nrf52840dk_nrf52840.overlay
vl6180x/src/: main.c
vl6180x/src/vl6180x/: vl6180x.c  vl6180x.h  vl6180x_cfg.h  vl6180x_i2c.c  vl6180x_platform.h  vl6180x_types.h
(+26 files in other folders)
